--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body alink="#914c24" vlink="914c24">
 
-    <object id="home" data="https://shademusic1.goodbarber.app" type="text/html">
+    <object id="home" data="mymusic/index.html" type="text/html">
     </object>
     <object id="player" name="player" data="song.html" type="text/html">
     </object>
