--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="css/app.css">
-    <link rel="manifest" href="mymusic/manifest.json">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body alink="#914c24" vlink="914c24">
